// TODO message结构的属性名请使用 驼峰小写字母开始
// TODO enum枚举的属性名请使用 驼峰大写字母开始
syntax = "proto3";
option go_package = "lucky/server/gen/msg";
package pb;

// 加入房间请求
message JoinRoomRequest {
  int64 roomId = 1;   // 房间ID（可选，如果不提供则使用默认房间）
  int64 playerId = 2; // 玩家ID（可选，如果不提供则从 session 获取）
}

// 加入房间响应
message JoinRoomResponse {
  string roomId = 1;      // 房间ID
  int32 playerCount = 2; // 当前房间玩家数量
  int32 maxPlayers = 3;  // 房间最大玩家数
  bool success = 4;      // 是否成功
  string message = 5;    // 消息
}

// 离开房间请求
message LeaveRoomRequest {
  int64 playerId = 1; // 玩家ID
}

// 离开房间响应
message LeaveRoomResponse {
  bool success = 1;   // 是否成功
  string message = 2; // 消息
}

// 获取房间信息请求
message GetRoomInfoRequest {
  // 空请求，使用 None
}

// 获取房间信息响应
message GetRoomInfoResponse {
  string roomId = 1;      // 房间ID
  int32 playerCount = 2;  // 当前房间玩家数量
  int32 maxPlayers = 3;   // 房间最大玩家数
  repeated int64 playerIds = 4; // 房间内玩家ID列表
}

// 创建房间请求
message CreateRoomRequest {
  int32 maxPlayers = 1; // 房间最大玩家数
  string roomName = 2;  // 房间名称（可选）
}

// 创建房间响应
message CreateRoomResponse {
  string roomId = 1;     // 房间ID
  bool success = 2;       // 是否成功
  string message = 3;     // 消息
}

// 房间广播请求
message RoomBroadcastRequest {
  string message = 1;    // 广播消息内容
  int32 messageType = 2; // 消息类型
}

// 房间广播响应
message RoomBroadcastResponse {
  bool success = 1;   // 是否成功
  int32 sentCount = 2; // 发送给多少个玩家
}

